# rust_cadical

./: Cargo.toml  README.md  build.rs
src/: lib.rs
tests/: lib.rs
